crates/iroha_executor_data_model_derive/tests/ui/fail/permission_missing_serde.stderr
error[E0277]: the trait bound `MissingSerde: iroha_schema::IntoSchema` is not satisfied
 --> tests/ui/fail/permission_missing_serde.rs:7:8
  |
7 | struct MissingSerde {
  |        ^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `iroha_schema::IntoSchema` is not implemented for `MissingSerde`
 --> tests/ui/fail/permission_missing_serde.rs:7:1
  |
7 | struct MissingSerde {
  | ^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `iroha_schema::IntoSchema`:
            ()
            AbiVersion
            AbsoluteOutlier
            AccessSetHints
            AccountAddress
            AccountController
            AccountDetails
            AccountEvent
          and $N others
note: required by a bound in `iroha_executor_data_model::permission::Permission`
 --> $WORKSPACE/crates/iroha_executor_data_model/src/permission.rs
  |
  | pub trait Permission: JsonSerialize + JsonDeserializeOwned + IntoSchema {
  |                                                              ^^^^^^^^^^ required by this bound in `Permission`
  = note: `Permission` is a "sealed trait", because to implement it you also need to implement `iroha_schema::IntoSchema`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            iroha_executor_data_model::isi::multisig::MultisigInstructionBox
            iroha_executor_data_model::isi::multisig::MultisigRegister
            iroha_executor_data_model::isi::multisig::MultisigPropose
            iroha_executor_data_model::isi::multisig::MultisigApprove
            iroha_executor_data_model::isi::multisig::MultisigSpec
            iroha_executor_data_model::isi::multisig::MultisigProposalValue
            iroha_executor_data_model::permission::peer::CanManagePeers
            iroha_executor_data_model::permission::domain::CanRegisterDomain
          and $N others

error[E0277]: the trait bound `MissingSerde: JsonDeserialize` is not satisfied
 --> tests/ui/fail/permission_missing_serde.rs:7:8
  |
7 | struct MissingSerde {
  |        ^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `JsonDeserialize` is not implemented for `MissingSerde`
 --> tests/ui/fail/permission_missing_serde.rs:7:1
  |
7 | struct MissingSerde {
  | ^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `JsonDeserialize`:
            ()
            AbiVersion
            AbsoluteOutlier
            AccessSetHints
            AccountAddress
            AccountController
            AccountDetails
            AccountEvent
          and $N others
  = note: required for `MissingSerde` to implement `DeserializeOwned`
note: required by a bound in `iroha_executor_data_model::permission::Permission`
 --> $WORKSPACE/crates/iroha_executor_data_model/src/permission.rs
  |
  | pub trait Permission: JsonSerialize + JsonDeserializeOwned + IntoSchema {
  |                                       ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Permission`

error[E0277]: the trait bound `MissingSerde: JsonSerialize` is not satisfied
 --> tests/ui/fail/permission_missing_serde.rs:7:8
  |
7 | struct MissingSerde {
  |        ^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `FastJsonWrite` is not implemented for `MissingSerde`
 --> tests/ui/fail/permission_missing_serde.rs:7:1
  |
7 | struct MissingSerde {
  | ^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `FastJsonWrite`:
            &T
            &mut T
            AbsoluteOutlier
            AccessSetHints
            AccountController
            AccountDetails
            AccountEvent
            AccountEventFilter
          and $N others
  = note: required for `MissingSerde` to implement `JsonSerialize`
note: required by a bound in `iroha_executor_data_model::permission::Permission`
 --> $WORKSPACE/crates/iroha_executor_data_model/src/permission.rs
  |
  | pub trait Permission: JsonSerialize + JsonDeserializeOwned + IntoSchema {
  |                       ^^^^^^^^^^^^^ required by this bound in `Permission`

error[E0277]: the trait bound `MissingSerde: iroha_schema::IntoSchema` is not satisfied
 --> tests/ui/fail/permission_missing_serde.rs:6:10
  |
6 | #[derive(Permission)]
  |          ^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `iroha_schema::IntoSchema` is not implemented for `MissingSerde`
 --> tests/ui/fail/permission_missing_serde.rs:7:1
  |
7 | struct MissingSerde {
  | ^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `iroha_schema::IntoSchema`:
            ()
            AbiVersion
            AbsoluteOutlier
            AccessSetHints
            AccountAddress
            AccountController
            AccountDetails
            AccountEvent
          and $N others
note: required by a bound in `name`
 --> $WORKSPACE/crates/iroha_executor_data_model/src/permission.rs
  |
  | pub trait Permission: JsonSerialize + JsonDeserializeOwned + IntoSchema {
  |                                                              ^^^^^^^^^^ required by this bound in `Permission::name`
  |     /// Permission id, according to [`IntoSchema`].
  |     fn name() -> Ident {
  |        ---- required by a bound in this associated function
  = note: this error originates in the derive macro `Permission` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MissingSerde: JsonSerialize` is not satisfied
 --> tests/ui/fail/permission_missing_serde.rs:6:10
  |
6 | #[derive(Permission)]
  |          ^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `FastJsonWrite` is not implemented for `MissingSerde`
 --> tests/ui/fail/permission_missing_serde.rs:7:1
  |
7 | struct MissingSerde {
  | ^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `FastJsonWrite`:
            &T
            &mut T
            AbsoluteOutlier
            AccessSetHints
            AccountController
            AccountDetails
            AccountEvent
            AccountEventFilter
          and $N others
  = note: required for `MissingSerde` to implement `JsonSerialize`
note: required by a bound in `name`
 --> $WORKSPACE/crates/iroha_executor_data_model/src/permission.rs
  |
  | pub trait Permission: JsonSerialize + JsonDeserializeOwned + IntoSchema {
  |                       ^^^^^^^^^^^^^ required by this bound in `Permission::name`
  |     /// Permission id, according to [`IntoSchema`].
  |     fn name() -> Ident {
  |        ---- required by a bound in this associated function
  = note: this error originates in the derive macro `Permission` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MissingSerde: DeserializeOwned` is not satisfied
 --> tests/ui/fail/permission_missing_serde.rs:6:10
  |
6 | #[derive(Permission)]
  |          ^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `JsonDeserialize` is not implemented for `MissingSerde`
 --> tests/ui/fail/permission_missing_serde.rs:7:1
  |
7 | struct MissingSerde {
  | ^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `JsonDeserialize`:
            ()
            AbiVersion
            AbsoluteOutlier
            AccessSetHints
            AccountAddress
            AccountController
            AccountDetails
            AccountEvent
          and $N others
  = note: required for `MissingSerde` to implement `DeserializeOwned`
note: required by a bound in `name`
 --> $WORKSPACE/crates/iroha_executor_data_model/src/permission.rs
  |
  | pub trait Permission: JsonSerialize + JsonDeserializeOwned + IntoSchema {
  |                                       ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Permission::name`
  |     /// Permission id, according to [`IntoSchema`].
  |     fn name() -> Ident {
  |        ---- required by a bound in this associated function
  = note: this error originates in the derive macro `Permission` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MissingSerde: iroha_schema::IntoSchema` is not satisfied
 --> tests/ui/fail/permission_missing_serde.rs:7:8
  |
7 | struct MissingSerde {
  |        ^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `iroha_schema::IntoSchema` is not implemented for `MissingSerde`
 --> tests/ui/fail/permission_missing_serde.rs:7:1
  |
7 | struct MissingSerde {
  | ^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `iroha_schema::IntoSchema`:
            ()
            AbiVersion
            AbsoluteOutlier
            AccessSetHints
            AccountAddress
            AccountController
            AccountDetails
            AccountEvent
          and $N others
note: required by a bound in `name`
 --> $WORKSPACE/crates/iroha_executor_data_model/src/permission.rs
  |
  | pub trait Permission: JsonSerialize + JsonDeserializeOwned + IntoSchema {
  |                                                              ^^^^^^^^^^ required by this bound in `Permission::name`
  |     /// Permission id, according to [`IntoSchema`].
  |     fn name() -> Ident {
  |        ---- required by a bound in this associated function

error[E0277]: the trait bound `MissingSerde: JsonSerialize` is not satisfied
 --> tests/ui/fail/permission_missing_serde.rs:7:8
  |
7 | struct MissingSerde {
  |        ^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `FastJsonWrite` is not implemented for `MissingSerde`
 --> tests/ui/fail/permission_missing_serde.rs:7:1
  |
7 | struct MissingSerde {
  | ^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `FastJsonWrite`:
            &T
            &mut T
            AbsoluteOutlier
            AccessSetHints
            AccountController
            AccountDetails
            AccountEvent
            AccountEventFilter
          and $N others
  = note: required for `MissingSerde` to implement `JsonSerialize`
note: required by a bound in `name`
 --> $WORKSPACE/crates/iroha_executor_data_model/src/permission.rs
  |
  | pub trait Permission: JsonSerialize + JsonDeserializeOwned + IntoSchema {
  |                       ^^^^^^^^^^^^^ required by this bound in `Permission::name`
  |     /// Permission id, according to [`IntoSchema`].
  |     fn name() -> Ident {
  |        ---- required by a bound in this associated function

error[E0277]: the trait bound `MissingSerde: DeserializeOwned` is not satisfied
 --> tests/ui/fail/permission_missing_serde.rs:7:8
  |
7 | struct MissingSerde {
  |        ^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `JsonDeserialize` is not implemented for `MissingSerde`
 --> tests/ui/fail/permission_missing_serde.rs:7:1
  |
7 | struct MissingSerde {
  | ^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `JsonDeserialize`:
            ()
            AbiVersion
            AbsoluteOutlier
            AccessSetHints
            AccountAddress
            AccountController
            AccountDetails
            AccountEvent
          and $N others
  = note: required for `MissingSerde` to implement `DeserializeOwned`
note: required by a bound in `name`
 --> $WORKSPACE/crates/iroha_executor_data_model/src/permission.rs
  |
  | pub trait Permission: JsonSerialize + JsonDeserializeOwned + IntoSchema {
  |                                       ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Permission::name`
  |     /// Permission id, according to [`IntoSchema`].
  |     fn name() -> Ident {
  |        ---- required by a bound in this associated function
